# huygens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  run_comprehensive_demo.py  sample_heart_rate_sensors_config.json  setup.py  validate_biomechanical_data.py
.github/workflows/: ci.yml  release.yml
demo/: README.md  README_Cardiovascular_Analysis_Suite.md  README_Entropy_Oscillation_Framework.md  YOUR_heart_rate_oscillatory_analysis_report.html  analyze_cardiovascular_data.py  analyze_entropy_oscillation_data.py  analyze_olympic_vs_personal_comparison.py  biomechanical_oscillatory_system.py  demonstrate_standing_fundamental_oscillation.py  entropy_oscillation_coupling_framework.py  experimental_analysis.py  geospatial_oscillatory_validator.py  heart_rate_oscillatory_analysis.py  quick_demo.py  requirements.txt  run_validation.py  sample_personal_data_config.json  sample_professional_cardiovascular_data.json  simple_analysis_demo.py  spatiotemporal_coupling_validator.py  standing_oscillation_mathematical_model.py  test_activity_sleep_validator.py  universal_oscillatory_transform.py  universal_transformation_framework.py
demo/src/: advanced_analysis.py  comprehensive_validator.py  geospatial_oscillatory_coupling_validator.py  oscillatory_simulations.py  sleep_activity_oscillatory_mirror_validator.py  validation_platform.py
demo/src/biomechanics/: README.md  cadence.py  stance_time_balance.py  step_length.py  unified_biomechanical_oscillatory_theorem.py  vertical_oscilations.py  vertical_ratio.py
demo/src/circulatory/: __init__.py  oscillatory_circulatory_validator.py
demo/src/circulatory/results/circulatory/: circulatory_validation_summary.json
demo/src/consciousness/: __init__.py  bmd_frame_selection_validator.py  comprehensive_consciousness_validator.py  fire_consciousness_coupling_validator.py  multiscale_oscillatory_consciousness_validator.py  quantum_ion_consciousness_validator.py
demo/src/experimental_data/: __init__.py  experimental_biometric_validator.py
demo/src/genome/: oscillatory_genome_validator.py
demo/src/heart_rate/: motion_artefacts.py  ppg_signal.py  sleep_heart_rate_alignment.py  time_domain_analysis.py
demo/src/intracellular/: __init__.py  oscillatory_intracellular_validator.py
demo/src/membrane/: __init__.py  oscillatory_membrane_validator.py
demo/src/metabolic/: __init__.py  oscillatory_metabolic_validator.py
demo/src/neural/: __init__.py  oscillatory_neural_validator.py
demo/src/oscillation_transform/: README.md
demo/src/physics/: __init__.py  oscillatory_physics_validator.py
demo/src/respiratory/: __init__.py  oscillatory_respiratory_validator.py
demo/src/sleep/: __init__.py  oscillatory_sleep_validator.py
demo/src/tissue/: oscillatory_tissue_validator.py
docs/: banabakintu.tex  github-repos.md  stream.md
docs/biomechanics/: biomech_references.bib
docs/neuroscience/: references.bib
docs/ocillations/: naked-engine.tex
docs/ocillations/applications/bioinformatics/: borgia.tex  gospel.tex  ion-to-drip-algorithm.tex  lavoisier.tex  molecule-to-drip-algorithm.tex  mufakose-genomics.tex  oscillatory-cheminformatics.tex  oscillatory-genomics.tex
docs/ocillations/applications/biology/: cognitive-neuromuscular-oscillations.tex  human-perception.tex
docs/ocillations/applications/biology/bioreactor/: bioreactor.tex
docs/ocillations/applications/biology/cellular-processes/: nebuchadnezzar.tex
docs/ocillations/applications/biology/locomotor-inactivity/: locomotor-inactivity.tex
docs/ocillations/applications/software/: audio-drip-algorithm.tex  heihachi.tex  oscillatory-heihachi.tex  oscillatory-network.tex
docs/ocillations/applications/sprint-running/: berlin.md  mathematical-proofs.tex  reference-validation.tex
docs/oscillations/: empirical-validation-study-design.tex  fire-circle-behavioral-acquisition-analysis.tex  standing-fundamental-oscillation-framework.tex
docs/publication/: mathematical-proofs.tex  reference-validation.tex
experimental-data/: README.md
oscillator/: README.md  requirements.txt  setup.py
oscillator/core/analysis/: __init__.py  circuit_equivalent.py  coupling.py  frequency_domain.py  stability_analysis.py  time_domain.py
src/: cardiovascular_oscillatory_suite.py  gps_oscillatory_analysis.py  oscillator.rs  pattern_discovery_engine.py  technological_infrastructure_model.py
(+6 files in other folders)
